ChangeLog
=========


2021-12-31: quickly-0.4.0

- added relative module, with abs2rel and rel2abs functions
- possible to direct generators in Node and Range to not descend in a node
- added node.Range class, to denote a range within a Node tree
- added end parameter to Element.find_descendant(s)
- added Element.find_descendant_right() and -left()
- added dom.edit module to edit a parce document via the DOM node tree
- added pitch.PitchProcessor.find_language and follow_language()
- some methods/functions renamed and API cleanups
- documentation improvements


2021-12-21: quickly-0.3.0

- requires parce-0.28.0
- DOM elegantly handles untransformed parce stuff such as CSS/JS in Html
- Note and positioned Rest now have attrs for octave, accidental and oct_check
- pitch: added Pitch and PitchProcessor to read/write pitch names in all
  languages, with style preferences for writing pitch names
- added lily.Spanner.find_parallel() to find the other end of a spanner
- added transpose module, transpose music in a node or (part of) parce.Document


2021-12-09: quickly-0.2.0

- requires parce-0.27.0
- added registry module to find and guess languages (like parce)
- added LaTeX language and transform (for lilypond-book)
- added element constructor helper for dom.htm module
- added Element.py_dump() to create tree structures in Python code
- simplified dom.read module and API, now that parce's Transform finding
  algorithm is configurable
- small bugfixes, improvements and documentation updates


2021-11-25: quickly-0.1.0

- requires parce-0.26.0
- added html language and transform (for lilypond-book)
- add dom.htm element types (for lilypond-book HTML documents)
- added indent module and support for creating properly indented output
- documentation improvements


2021-11-11: quickly-0.0.9

- requires parce-0.25.0
- Add support for some new LilyPond-2.23 commands
- fixed case where a symbol was interpreted as a pitch eg: \tweak color red do