@@ -2,6 +2,13 @@ ChangeLog
 =========
 
 
+current: quickly-0.5.0
+
+- introduced lily.ChordBody and FigureBody, to be able to add Duration at Chord
+  and Figure directly
+- added lily.Durable as base type for any stuff that can have a Duration
+
+
 2021-12-31: quickly-0.4.0
 
 - added relative module, with abs2rel and rel2abs functions
